[package]
authors = ["meteor <bobogei81123@gmail.com>"]
name = "bus"
version = "0.1.0"

[dependencies]
lazy_static = "0.2.8"
log = "0.3.8"
reqwest = "0.7.3"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rocket_contrib = "0.3.2"
serde = "1.0.14"
serde_derive = "1.0.14"
serde_json = "1.0.3"
serde_yaml = "0.7.1"
